Fix visibility of 'your turn' message

--- a/src/client/components/global.scss
+++ b/src/client/components/global.scss
@@ -420,7 +420,6 @@ $gmAreaColor: #ab62c0;
 
 .your-turn {
   position: fixed;
-  display: inline-block;
   top: 1rem;
   left: 50%;
   margin-left: -15vw;
